Customized the demo page and fixed the css file's spacing

--- a/widget-from-scratch/password.css
+++ b/widget-from-scratch/password.css
@@ -1,43 +1,39 @@
 .ps_field {
-
-
+    padding: 4px 8px 4px 8px;
 }
 
 
 .code-green {
-background: rgb(252,255,244); /* Old browsers */
-background: -moz-linear-gradient(-45deg,  rgba(252,255,244,1) 0%, rgba(223,229,215,1) 40%, rgba(53,214,0,1) 73%, rgba(53,214,0,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(252,255,244,1)), color-stop(40%,rgba(223,229,215,1)), color-stop(73%,rgba(53,214,0,1)), color-stop(100%,rgba(53,214,0,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* IE10+ */
-background: linear-gradient(135deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#35d600',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
+    background: rgb(252,255,244); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(252,255,244,1) 0%, rgba(223,229,215,1) 40%, rgba(53,214,0,1) 73%, rgba(53,214,0,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(252,255,244,1)), color-stop(40%,rgba(223,229,215,1)), color-stop(73%,rgba(53,214,0,1)), color-stop(100%,rgba(53,214,0,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(53,214,0,1) 73%,rgba(53,214,0,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#35d600',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 
 .code-yellow {
-background: rgb(252,255,244); /* Old browsers */
-background: -moz-linear-gradient(-45deg,  rgba(252,255,244,1) 0%, rgba(223,229,215,1) 40%, rgba(226,226,0,1) 70%, rgba(226,226,0,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(252,255,244,1)), color-stop(40%,rgba(223,229,215,1)), color-stop(70%,rgba(226,226,0,1)), color-stop(100%,rgba(226,226,0,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* IE10+ */
-background: linear-gradient(135deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#e2e200',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-
+    background: rgb(252,255,244); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(252,255,244,1) 0%, rgba(223,229,215,1) 40%, rgba(226,226,0,1) 70%, rgba(226,226,0,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(252,255,244,1)), color-stop(40%,rgba(223,229,215,1)), color-stop(70%,rgba(226,226,0,1)), color-stop(100%,rgba(226,226,0,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(226,226,0,1) 70%,rgba(226,226,0,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#e2e200',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 
 .code-red {
-background: rgb(252,255,244); /* Old browsers */
-background: -moz-linear-gradient(-45deg,  rgba(252,255,244,1) 0%, rgba(223,229,215,1) 40%, rgba(255,0,0,1) 73%, rgba(255,0,0,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(252,255,244,1)), color-stop(40%,rgba(223,229,215,1)), color-stop(73%,rgba(255,0,0,1)), color-stop(100%,rgba(255,0,0,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* IE10+ */
-background: linear-gradient(135deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#ff0000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: rgb(252,255,244); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(252,255,244,1) 0%, rgba(223,229,215,1) 40%, rgba(255,0,0,1) 73%, rgba(255,0,0,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(252,255,244,1)), color-stop(40%,rgba(223,229,215,1)), color-stop(73%,rgba(255,0,0,1)), color-stop(100%,rgba(255,0,0,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(252,255,244,1) 0%,rgba(223,229,215,1) 40%,rgba(255,0,0,1) 73%,rgba(255,0,0,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#ff0000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
